example/secondfile/objects/PriceList_Default__c.object
<CustomObject>
    <description>Object used to carry out Price List Defaulting logic to default price list on quotes based on Product , Term and Tier.</description>
    <fields>
        <fullName>AIAType__c</fullName>
        <label>AIA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Pricelist Defaults</relationshipLabel>
        <relationshipName>Pricelist_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricelist Defaults</relationshipLabel>
        <relationshipName>Pricelist_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pricelist Default</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PriceList__c</columns>
        <columns>Product__c</columns>
        <columns>Term__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PriceList Default Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricelist Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>